fixed spacing issues with grid images

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ input {
 
 .grid {
     display: grid;
-    gap: 10px;
+    gap: 20px;
     grid-template-columns: repeat(auto-fit);
     grid-template-rows: repeat(auto-fit);
     align-self: center;
@@ -181,16 +181,16 @@ input {
  .grid-7 {
     grid-column: 4;
     grid-row: 2 / span 2;
-    
-    
  }
  .grid-image {
-    border-radius: 10px;
+    width: 100%;
+    height: 100%;
  }
 
  .grid-image:hover {
     transform: scale(1.05);
     transition: 0.5 ease-in-out;
+    border-radius: 10px;
     height: 100%;
     width: 100%;
  }
